--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* buttons */
+.btn_primary_a {
+  @apply px-4 py-[14px] rounded-2xl font-semibold bg-primary text-white text-h5;
+}
+
+.btn_primary_s {
+  @apply px-4 py-[14px] border border-secondary rounded-2xl font-semibold text-h5 text-primary hover:bg-bgSecondary transition-all duration-300;
+}
