--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,13 @@
 .btn_primary_s {
   @apply px-4 py-[14px] border border-secondary rounded-2xl font-semibold text-h5 text-primary hover:bg-bgSecondary transition-all duration-300;
 }
+
+.bg-screens {
+  width: 100%;
+  height: 120px;
+  background: linear-gradient(
+    180deg,
+    rgba(17, 17, 17, 0) 0%,
+    rgba(17, 17, 17, 0.5) 100%
+  );
+}
