--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'just-sans';
+  src: local('JUST Sans Light'),
+    url('./fonts/JUSTSansLight.woff') format('woff');
+}
+
+.just-sans {
+  font-family: 'just-sans', sans-serif;
+}
+
+body {
+  font-family: 'just-sans', sans-serif;
+}
+
 /* buttons start */
 .btn_primary_a {
   @apply px-4 py-[14px] rounded-2xl font-semibold bg-primary text-white text-h5;
