login modal are create

--- a/src/index.css
+++ b/src/index.css
@@ -42,11 +42,11 @@ body {
 
 /* buttons start */
 .btn_primary_a {
-  @apply px-4 py-[14px] rounded-2xl font-semibold bg-primary text-white text-h5;
+  @apply px-4 py-[14px] rounded-2xl font-semibold bg-textPrimary text-white text-h5;
 }
 
 .btn_primary_s {
-  @apply px-4 py-[14px] border border-secondary rounded-2xl font-semibold text-h5 text-primary hover:bg-bgSecondary transition-all duration-300;
+  @apply px-4 py-[14px] border border-secondary rounded-2xl font-semibold text-h5 text-textPrimary hover:bg-bgSecondary transition-all duration-300;
 }
 /* buttons end */
 
@@ -61,8 +61,8 @@ body {
 }
 
 .active {
-  @apply bg-bgSecondary text-primary;
+  @apply bg-bgSecondary text-textPrimary;
 }
 .inactive {
-  @apply hover:bg-bgSecondary hover:text-primary transition-all duration-300;
+  @apply hover:bg-bgSecondary hover:text-textPrimary transition-all duration-300;
 }
