--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body {
   @apply px-4 py-[14px] border border-secondary rounded-2xl font-semibold text-h5 text-textPrimary hover:bg-bgSecondary transition-all duration-300 dark:text-secondary dark:hover:text-textPrimary;
 }
 .btn_primary_d {
-  @apply px-4 py-2 rounded-[20px] border border-secondary text-textPrimary hover:bg-bgSecondary transition-all duration-300;
+  @apply px-4 py-2 rounded-[20px] border border-secondary text-textPrimary hover:bg-bgSecondary transition-all dark:text-secondary dark:hover:text-textPrimary duration-300;
 }
 /* buttons end */
 
