--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@ body {
   @apply px-4 py-2 rounded-[20px] border border-secondary text-textPrimary hover:bg-bgSecondary transition-all dark:text-secondary dark:hover:text-textPrimary duration-300;
 }
 /* buttons end */
+/* .img-purple {
+  filter: invert(32%) sepia(98%) saturate(1436%) hue-rotate(266deg)
+    brightness(96%) contrast(91%);
+} */
 
 .bg-screens {
   width: 100%;
