--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,24 @@ body {
   color: #dcdca4 !important; /* Gray color for comments */
 }
 
+/* swiper */
+.swiper-button-prev,
+.swiper-button-next {
+  width: 48px !important;
+  height: 48px !important;
+  padding: 12px !important;
+  flex-shrink: 0 !important;
+  border-radius: 100% !important;
+  background: var(--White, #fff) !important;
+  box-shadow: -4px 6px 20px 0px rgba(0, 0, 0, 0.1) !important;
+}
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: 24px !important;
+  color: #000 !important;
+  font-weight: 600 !important;
+}
+
 .offcanvas.active {
   right: 0;
 }
